--- a/mernbackend/public/index.html
+++ b/mernbackend/public/index.html
@@ -11,8 +11,7 @@
     <div class="signup_box">
 
         <h3>SIGNUP</h3>
-
-        <form>
+        <form action="register.html">
 
             <p>User Name</p>
             <input type="text" name="signup_username" placeholder="Enter Username">
